# multimodal-ocr-textract-ollama

./: .gitignore  API_DOCS.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  models.txt  test_integration.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  errors.py  image_utils.py  main.py  model_utils.py  ollama_client.py  schemas.py
backend/tests/: test_extract_text.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: Header.tsx  ModelSelector.tsx  ResultPanel.tsx  UploadZone.tsx
frontend/src/pages/: Index.tsx
scripts/: docker-control.sh  restart.sh  setup.sh  start.sh  stop.sh  test.sh
tests/: api_test.py  test_api.sh
